[package]
name = "main"
version = "0.1.0"
authors = ["Eduin Garcia Cordero <eduinlight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["image"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
